Fix navbar alignment

--- a/style.css
+++ b/style.css
@@ -207,6 +207,12 @@ body {
     z-index: 4;
     position: fixed;
     top: 0px;
+    padding-top: 10px;
+    padding-left: 5px;
+}
+
+#navbar.navbar-shrink {
+    padding-top: 0px;
 }
 
 @media (max-width: 761px) {
